force reload to render html

--- a/templates/NetworkUsersMachines.html
+++ b/templates/NetworkUsersMachines.html
@@ -1280,6 +1280,7 @@ firewall --&gt; cloud
 <div class="section" id="conclusion">
 <h2>8. Conclusion<a class="headerlink" href="#conclusion" title="Permalink to this headline">¶</a></h2>
 <p>TODO</p>
+<p>TODO: Add todo keyword to gather all todos</p>
 </div>
 </div>
 
