buid from source

--- a/templates/NetworkUsersMachines.html
+++ b/templates/NetworkUsersMachines.html
@@ -90,37 +90,37 @@
 <li class="toctree-l2"><a class="reference internal" href="#view-all-the-icons-with-listsprites">2. View all the icons with listsprites</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#source">Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#play">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#exercises">Exercises</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#explore">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#gather-the-icons-we-need">3. Gather the icons we need</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#id1">Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#id2">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id4">Exercises</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id4">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#decorate-the-icons">4. Decorate the Icons</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#id5">Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#id6">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id8">Exercises</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id8">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#create-the-diagram-by-connecting-things-together">5. Create the diagram by connecting things together</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#id9">Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#id10">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id12">Exercises</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id12">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#change-the-layout-to-vertical">6. Change the Layout to Vertical</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#id13">Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#id14">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id16">Exercises</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id16">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#change-the-layout-by-grouping-icons-together">7. Change the Layout by grouping icons together</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#id17">Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#id18">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id20">Exercises</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id20">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#conclusion">8. Conclusion</a></li>
@@ -199,9 +199,9 @@
 <p>Each step has</p>
 <ol class="arabic simple">
 <li><p>An objective - the step heading</p></li>
-<li><p>Source code for the diagram</p></li>
-<li><p>Play button where you can test the diagram and play with it.</p></li>
-<li><p>Exercise - where you can confirm your understanding by try things as you play.</p></li>
+<li><p>Source code - for the diagram</p></li>
+<li><p>Play - where you can test the diagram and play with it.</p></li>
+<li><p>Explore - where you can confirm your understanding by trying things as you play.</p></li>
 </ol>
 </div>
 <div class="section" id="example-network-diagram">
@@ -359,8 +359,8 @@ listsprites
 <h3>Play<a class="headerlink" href="#play" title="Permalink to this headline">¶</a></h3>
 <p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
 </div>
-<div class="section" id="exercises">
-<h3>Exercises<a class="headerlink" href="#exercises" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="explore">
+<h3>Explore<a class="headerlink" href="#explore" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>Take a look at some other stdlib libraries</p></li>
 <li><p>What happens if we don’t include any libraries?</p></li>
@@ -478,7 +478,7 @@ osa_osa_cloud: &lt;$osa_cloud&gt;
 <p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
 </div>
 <div class="section" id="id4">
-<h3>Exercises<a class="headerlink" href="#id4" title="Permalink to this headline">¶</a></h3>
+<h3>Explore<a class="headerlink" href="#id4" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>Change the server type to a different type of server</p></li>
 <li><p>Change the Operations user type to a different type of user</p></li>
@@ -599,7 +599,7 @@ osa_cloud(osa_cloud, &quot;label&quot;, &quot;tech&quot;)
 <p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
 </div>
 <div class="section" id="id8">
-<h3>Exercises<a class="headerlink" href="#id8" title="Permalink to this headline">¶</a></h3>
+<h3>Explore<a class="headerlink" href="#id8" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>TBD</p></li>
 </ol>
@@ -799,7 +799,7 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 <p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
 </div>
 <div class="section" id="id12">
-<h3>Exercises<a class="headerlink" href="#id12" title="Permalink to this headline">¶</a></h3>
+<h3>Explore<a class="headerlink" href="#id12" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>Add some text to describe the connection from firewall to cloud</p></li>
 </ol>
@@ -1043,7 +1043,7 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 <p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
 </div>
 <div class="section" id="id16">
-<h3>Exercises<a class="headerlink" href="#id16" title="Permalink to this headline">¶</a></h3>
+<h3>Explore<a class="headerlink" href="#id16" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>Arrange the diagram vertically with cloud on top, users on bottom</p></li>
 <li><p>Arrange the diagram horizontally from left to right with users on left, cloud on right</p></li>
@@ -1051,12 +1051,12 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 </div>
 </div>
 <div class="section" id="change-the-layout-by-grouping-icons-together">
-<h2>7. Change the Layout by grouping icons together<a class="headerlink" href="#change-the-layout-by-grouping-icons-together" title="Permalink to this headline">¶</a></h2>
+<h2>7. Change the Layout by grouping icons <a class="reference external" href="https://forum.plantuml.net/4387/please-provide-together-keyword-group-diagram-nodes-together">together</a><a class="headerlink" href="#change-the-layout-by-grouping-icons-together" title="Permalink to this headline">¶</a></h2>
 <p>Here we use the <a class="reference external" href="https://forum.plantuml.net/4387/please-provide-together-keyword-group-diagram-nodes-together">together</a> keyword.</p>
 <div class="admonition tip">
 <p class="admonition-title">Tip</p>
 <p>The <a class="reference external" href="https://forum.plantuml.net/4387/please-provide-together-keyword-group-diagram-nodes-together">together</a> keyword allows you to specify what icons you want to group together.
-Like all layout options, minimize their use. See why in the Exercise for this section.</p>
+Like all layout options, minimize their use. See why in the Explore section.</p>
 </div>
 <div class="figure align-center" id="id28">
 <p class="plantuml">
@@ -1271,7 +1271,7 @@ firewall --&gt; cloud
 <p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
 </div>
 <div class="section" id="id20">
-<h3>Exercises<a class="headerlink" href="#id20" title="Permalink to this headline">¶</a></h3>
+<h3>Explore<a class="headerlink" href="#id20" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>What happens if we put a “together” around the network elements too - line 33?</p></li>
 </ol>
