--- a/templates/NetworkUsersMachines.html
+++ b/templates/NetworkUsersMachines.html
@@ -96,31 +96,31 @@
 <li class="toctree-l2"><a class="reference internal" href="#gather-the-icons-we-need">3. Gather the icons we need</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#id1">Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#id2">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id4">Explore</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id3">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#decorate-the-icons">4. Decorate the Icons</a><ul>
-<li class="toctree-l3"><a class="reference internal" href="#id5">Source</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id6">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id8">Explore</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id4">Source</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id5">Play</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id6">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#create-the-diagram-by-connecting-things-together">5. Create the diagram by connecting things together</a><ul>
-<li class="toctree-l3"><a class="reference internal" href="#id9">Source</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id10">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id12">Explore</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id7">Source</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id8">Play</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id9">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#change-the-layout-to-vertical">6. Change the Layout to Vertical</a><ul>
-<li class="toctree-l3"><a class="reference internal" href="#id13">Source</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id14">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id16">Explore</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id10">Source</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id11">Play</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id12">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#change-the-layout-by-grouping-icons-together">7. Change the Layout by grouping icons together</a><ul>
-<li class="toctree-l3"><a class="reference internal" href="#id17">Source</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id18">Play</a></li>
-<li class="toctree-l3"><a class="reference internal" href="#id20">Explore</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id13">Source</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id14">Play</a></li>
+<li class="toctree-l3"><a class="reference internal" href="#id15">Explore</a></li>
 </ul>
 </li>
 <li class="toctree-l2"><a class="reference internal" href="#conclusion">8. Conclusion</a></li>
@@ -206,7 +206,7 @@
 </div>
 <div class="section" id="example-network-diagram">
 <h2>Example Network Diagram<a class="headerlink" href="#example-network-diagram" title="Permalink to this headline">¶</a></h2>
-<div class="figure align-center" id="id21">
+<div class="figure align-center" id="id16">
 <p class="plantuml">
 <img src="../_images/plantuml-926083931d94f8568f7ab10c7406658c31bc2c78.png" alt="&#64;startuml
 
@@ -276,7 +276,7 @@ firewall --&gt; cloud
 
 "/>
 </p>
-<p class="caption"><span class="caption-text"><em>Here’s one we made earlier - and you can too</em></span><a class="headerlink" href="#id21" title="Permalink to this image">¶</a></p>
+<p class="caption"><span class="caption-text"><em>Here’s one we made earlier - and you can too</em></span><a class="headerlink" href="#id16" title="Permalink to this image">¶</a></p>
 </div>
 <p>Here we have a typical network diagram:</p>
 <ol class="arabic simple">
@@ -309,7 +309,7 @@ firewall --&gt; cloud
 <p class="admonition-title">Tip</p>
 <p><a class="reference external" href="https://plantuml.com/#">listsprites</a> lists all the sprites in the files you include in your diagram source</p>
 </div>
-<div class="figure align-center" id="id22">
+<div class="figure align-center" id="id17">
 <p class="plantuml">
 <img src="../_images/plantuml-cc8070e837c9c07dc9b5cf8c55a978419bef9c84.png" alt="&#64;startuml
 
@@ -325,7 +325,7 @@ listsprites
 &#64;enduml
 "/>
 </p>
-<p class="caption"><span class="caption-text"><em>Using listsprites to show all icons in a library</em></span><a class="headerlink" href="#id22" title="Permalink to this image">¶</a></p>
+<p class="caption"><span class="caption-text"><em>Using listsprites to show all icons in a library</em></span><a class="headerlink" href="#id17" title="Permalink to this image">¶</a></p>
 </div>
 <div class="section" id="source">
 <h3>Source<a class="headerlink" href="#source" title="Permalink to this headline">¶</a></h3>
@@ -357,7 +357,7 @@ listsprites
 </div>
 <div class="section" id="play">
 <h3>Play<a class="headerlink" href="#play" title="Permalink to this headline">¶</a></h3>
-<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
+<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/"><img alt="playbutton1" src="../_images/play.png" style="width: 40px;" /></a> Press to play around with this diagram source online.</p>
 </div>
 <div class="section" id="explore">
 <h3>Explore<a class="headerlink" href="#explore" title="Permalink to this headline">¶</a></h3>
@@ -378,7 +378,7 @@ listsprites
 <p class="admonition-title">Note</p>
 <p>We’re using a Blue theme, so our icons appear blue by default. Yours may appear yellow.</p>
 </div>
-<div class="figure align-center" id="id23">
+<div class="figure align-center" id="id18">
 <p class="plantuml">
 <img src="../_images/plantuml-2fdf274278a80b03358edf611a038c74e6cea03a.png" alt="&#64;startuml
 
@@ -409,7 +409,7 @@ osa_osa_cloud: &lt;$osa_cloud&gt;
 &#64;enduml
 "/>
 </p>
-<p class="caption"><span class="caption-text"><em>Select the subset of icons for our diagram</em></span><a class="headerlink" href="#id23" title="Permalink to this image">¶</a></p>
+<p class="caption"><span class="caption-text"><em>Select the subset of icons for our diagram</em></span><a class="headerlink" href="#id18" title="Permalink to this image">¶</a></p>
 </div>
 <div class="section" id="id1">
 <h3>Source<a class="headerlink" href="#id1" title="Permalink to this headline">¶</a></h3>
@@ -475,10 +475,10 @@ osa_osa_cloud: &lt;$osa_cloud&gt;
 </div>
 <div class="section" id="id2">
 <h3>Play<a class="headerlink" href="#id2" title="Permalink to this headline">¶</a></h3>
-<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
+<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/"><img alt="playbutton2" src="../_images/play.png" style="width: 40px;" /></a> Press to play around with this diagram source online.</p>
 </div>
-<div class="section" id="id4">
-<h3>Explore<a class="headerlink" href="#id4" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id3">
+<h3>Explore<a class="headerlink" href="#id3" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>Change the server type to a different type of server</p></li>
 <li><p>Change the Operations user type to a different type of user</p></li>
@@ -491,7 +491,7 @@ osa_osa_cloud: &lt;$osa_cloud&gt;
 <li><p>We use the default functions defined as part of stdlib that decorate our raw sprites</p></li>
 <li><p>This makes them much more visually appealing.</p></li>
 </ol>
-<div class="figure align-center" id="id24">
+<div class="figure align-center" id="id19">
 <p class="plantuml">
 <img src="../_images/plantuml-79345a690fa23eaa488b9e3b7e912e310561003b.png" alt="&#64;startuml
 
@@ -526,10 +526,10 @@ osa_cloud(osa_cloud, &quot;label&quot;, &quot;tech&quot;)
 
 "/>
 </p>
-<p class="caption"><span class="caption-text"><em>Decorate the icons for our diagram</em></span><a class="headerlink" href="#id24" title="Permalink to this image">¶</a></p>
+<p class="caption"><span class="caption-text"><em>Decorate the icons for our diagram</em></span><a class="headerlink" href="#id19" title="Permalink to this image">¶</a></p>
 </div>
-<div class="section" id="id5">
-<h3>Source<a class="headerlink" href="#id5" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id4">
+<h3>Source<a class="headerlink" href="#id4" title="Permalink to this headline">¶</a></h3>
 <div class="highlight-cpp notranslate"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
  2
  3
@@ -594,12 +594,12 @@ osa_cloud(osa_cloud, &quot;label&quot;, &quot;tech&quot;)
 </pre></div>
 </td></tr></table></div>
 </div>
-<div class="section" id="id6">
-<h3>Play<a class="headerlink" href="#id6" title="Permalink to this headline">¶</a></h3>
-<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
+<div class="section" id="id5">
+<h3>Play<a class="headerlink" href="#id5" title="Permalink to this headline">¶</a></h3>
+<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/"><img alt="playbutton3" src="../_images/play.png" style="width: 40px;" /></a> Press to play around with this diagram source online.</p>
 </div>
-<div class="section" id="id8">
-<h3>Explore<a class="headerlink" href="#id8" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id6">
+<h3>Explore<a class="headerlink" href="#id6" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>TBD</p></li>
 </ol>
@@ -613,7 +613,7 @@ osa_cloud(osa_cloud, &quot;label&quot;, &quot;tech&quot;)
 <li><p>Bob is an Accountant in the Accounts team. He has Mac and an iPhone.</p></li>
 <li><p>They connect to the office server, and via a firewall to the Internet.</p></li>
 </ol>
-<div class="figure align-center" id="id25">
+<div class="figure align-center" id="id20">
 <p class="plantuml">
 <img src="../_images/plantuml-83c630b4df7732ac00e8c2952a8352eb06ab48de.png" alt="&#64;startuml
 
@@ -674,10 +674,10 @@ firewall -&gt; cloud
 
 "/>
 </p>
-<p class="caption"><span class="caption-text"><em>Connect the icons</em></span><a class="headerlink" href="#id25" title="Permalink to this image">¶</a></p>
+<p class="caption"><span class="caption-text"><em>Connect the icons</em></span><a class="headerlink" href="#id20" title="Permalink to this image">¶</a></p>
 </div>
-<div class="section" id="id9">
-<h3>Source<a class="headerlink" href="#id9" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id7">
+<h3>Source<a class="headerlink" href="#id7" title="Permalink to this headline">¶</a></h3>
 <div class="highlight-cpp notranslate"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
  2
  3
@@ -794,12 +794,12 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 </pre></div>
 </td></tr></table></div>
 </div>
-<div class="section" id="id10">
-<h3>Play<a class="headerlink" href="#id10" title="Permalink to this headline">¶</a></h3>
-<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
+<div class="section" id="id8">
+<h3>Play<a class="headerlink" href="#id8" title="Permalink to this headline">¶</a></h3>
+<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/"><img alt="playbutton4" src="../_images/play.png" style="width: 40px;" /></a> Press to play around with this diagram source online.</p>
 </div>
-<div class="section" id="id12">
-<h3>Explore<a class="headerlink" href="#id12" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id9">
+<h3>Explore<a class="headerlink" href="#id9" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>Add some text to describe the connection from firewall to cloud</p></li>
 </ol>
@@ -813,8 +813,8 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 <p>We use “–&gt;” to connect the icons so they are arranged vertically</p>
 </div>
 <p>We can specify a connection direction as follows:</p>
-<table class="colwidths-given docutils align-default" id="id26">
-<caption><span class="caption-text">Tools Used</span><a class="headerlink" href="#id26" title="Permalink to this table">¶</a></caption>
+<table class="colwidths-given docutils align-default" id="id21">
+<caption><span class="caption-text">Tools Used</span><a class="headerlink" href="#id21" title="Permalink to this table">¶</a></caption>
 <colgroup>
 <col style="width: 17%" />
 <col style="width: 83%" />
@@ -845,7 +845,7 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 </tr>
 </tbody>
 </table>
-<div class="figure align-center" id="id27">
+<div class="figure align-center" id="id22">
 <p class="plantuml">
 <img src="../_images/plantuml-2d4aec6e19cea95db86d4f109305162ab07ffe54.png" alt="&#64;startuml
 
@@ -910,10 +910,10 @@ firewall --&gt; cloud
 
 "/>
 </p>
-<p class="caption"><span class="caption-text"><em>Use –&gt; to connect vertically</em></span><a class="headerlink" href="#id27" title="Permalink to this image">¶</a></p>
+<p class="caption"><span class="caption-text"><em>Use –&gt; to connect vertically</em></span><a class="headerlink" href="#id22" title="Permalink to this image">¶</a></p>
 </div>
-<div class="section" id="id13">
-<h3>Source<a class="headerlink" href="#id13" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id10">
+<h3>Source<a class="headerlink" href="#id10" title="Permalink to this headline">¶</a></h3>
 <div class="highlight-cpp notranslate"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
  2
  3
@@ -1038,12 +1038,12 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 </pre></div>
 </td></tr></table></div>
 </div>
-<div class="section" id="id14">
-<h3>Play<a class="headerlink" href="#id14" title="Permalink to this headline">¶</a></h3>
-<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
+<div class="section" id="id11">
+<h3>Play<a class="headerlink" href="#id11" title="Permalink to this headline">¶</a></h3>
+<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/"><img alt="playbutton5" src="../_images/play.png" style="width: 40px;" /></a> Press to play around with this diagram source online.</p>
 </div>
-<div class="section" id="id16">
-<h3>Explore<a class="headerlink" href="#id16" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id12">
+<h3>Explore<a class="headerlink" href="#id12" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>Arrange the diagram vertically with cloud on top, users on bottom</p></li>
 <li><p>Arrange the diagram horizontally from left to right with users on left, cloud on right</p></li>
@@ -1058,7 +1058,7 @@ osa_cloud(cloud, &quot;Internet&quot;, &quot;Network&quot;)
 <p>The <a class="reference external" href="https://forum.plantuml.net/4387/please-provide-together-keyword-group-diagram-nodes-together">together</a> keyword allows you to specify what icons you want to group together.
 Like all layout options, minimize their use. See why in the Explore section.</p>
 </div>
-<div class="figure align-center" id="id28">
+<div class="figure align-center" id="id23">
 <p class="plantuml">
 <img src="../_images/plantuml-926083931d94f8568f7ab10c7406658c31bc2c78.png" alt="&#64;startuml
 
@@ -1128,10 +1128,10 @@ firewall --&gt; cloud
 
 "/>
 </p>
-<p class="caption"><span class="caption-text"><em>Use together keyword to group our icons</em></span><a class="headerlink" href="#id28" title="Permalink to this image">¶</a></p>
+<p class="caption"><span class="caption-text"><em>Use together keyword to group our icons</em></span><a class="headerlink" href="#id23" title="Permalink to this image">¶</a></p>
 </div>
-<div class="section" id="id17">
-<h3>Source<a class="headerlink" href="#id17" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id13">
+<h3>Source<a class="headerlink" href="#id13" title="Permalink to this headline">¶</a></h3>
 <div class="highlight-cpp notranslate"><table class="highlighttable"><tr><td class="linenos"><div class="linenodiv"><pre> 1
  2
  3
@@ -1266,12 +1266,12 @@ firewall --&gt; cloud
 </pre></div>
 </td></tr></table></div>
 </div>
-<div class="section" id="id18">
-<h3>Play<a class="headerlink" href="#id18" title="Permalink to this headline">¶</a></h3>
-<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/">Play with online diagram</a></p>
+<div class="section" id="id14">
+<h3>Play<a class="headerlink" href="#id14" title="Permalink to this headline">¶</a></h3>
+<p><a class="reference external" href="http://www.plantuml.com/plantuml/uml/SoWkIImgAStDuU9IpCnBpYbDILMmoIzEjEFAoImkAIueoYn9vN98pKi1AW40/"><img alt="playbutton6" src="../_images/play.png" style="width: 40px;" /></a> Press to play around with this diagram source online.</p>
 </div>
-<div class="section" id="id20">
-<h3>Explore<a class="headerlink" href="#id20" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id15">
+<h3>Explore<a class="headerlink" href="#id15" title="Permalink to this headline">¶</a></h3>
 <ol class="arabic simple">
 <li><p>What happens if we put a “together” around the network elements too - line 33?</p></li>
 </ol>
