--- a/templates/PassSpriteAsParameter.html
+++ b/templates/PassSpriteAsParameter.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="../_static/theme_overrides.css" type="text/css" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
+    <link rel="next" title="To Do List" href="../todo.html" />
     <link rel="prev" title="Create a Diagram of a Typical Network" href="NetworkUsersMachines.html" /> 
 </head>
 
@@ -85,6 +86,10 @@
 <li class="toctree-l1"><a class="reference internal" href="../principles.html">Principles</a></li>
 <li class="toctree-l1"><a class="reference internal" href="NetworkUsersMachines.html">Create a Diagram of a Typical Network</a></li>
 <li class="toctree-l1 current"><a class="current reference internal" href="#">Create a Template from our Network Diagram</a></li>
+</ul>
+<p class="caption"><span class="caption-text">OtherFeatures</span></p>
+<ul>
+<li class="toctree-l1"><a class="reference internal" href="../todo.html">To Do List</a></li>
 </ul>
 
             
@@ -173,6 +178,8 @@ We’ll start with a diagram, then show how to make it into a template with cust
           <footer>
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
+      
+        <a href="../todo.html" class="btn btn-neutral float-right" title="To Do List" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
         <a href="NetworkUsersMachines.html" class="btn btn-neutral float-left" title="Create a Diagram of a Typical Network" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
