--- a/templates/PassSpriteAsParameter.html
+++ b/templates/PassSpriteAsParameter.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Create a Template from our Network Diagram &mdash; Playing with PlantUML  documentation</title>
+  <title>3. Create a Template from our Network Diagram &mdash; Playing with PlantUML  documentation</title>
   
 
   
@@ -36,8 +36,8 @@
   <link rel="stylesheet" href="../_static/theme_overrides.css" type="text/css" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="To Do List" href="../todo.html" />
-    <link rel="prev" title="Create a Diagram of a Typical Network" href="NetworkUsersMachines.html" /> 
+    <link rel="next" title="1. To Do List" href="../todo.html" />
+    <link rel="prev" title="2. Create a Diagram of a Typical Network" href="NetworkUsersMachines.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -83,13 +83,13 @@
             
               <p class="caption"><span class="caption-text">Introduction</span></p>
 <ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../principles.html">Principles</a></li>
-<li class="toctree-l1"><a class="reference internal" href="NetworkUsersMachines.html">Create a Diagram of a Typical Network</a></li>
-<li class="toctree-l1 current"><a class="current reference internal" href="#">Create a Template from our Network Diagram</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../principles.html">1. Principles</a></li>
+<li class="toctree-l1"><a class="reference internal" href="NetworkUsersMachines.html">2. Create a Diagram of a Typical Network</a></li>
+<li class="toctree-l1 current"><a class="current reference internal" href="#">3. Create a Template from our Network Diagram</a></li>
 </ul>
 <p class="caption"><span class="caption-text">OtherFeatures</span></p>
 <ul>
-<li class="toctree-l1"><a class="reference internal" href="../todo.html">To Do List</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../todo.html">1. To Do List</a></li>
 </ul>
 
             
@@ -135,7 +135,7 @@
     
       <li><a href="../index.html">Docs</a> &raquo;</li>
         
-      <li>Create a Template from our Network Diagram</li>
+      <li>3. Create a Template from our Network Diagram</li>
     
     
       <li class="wy-breadcrumbs-aside">
@@ -155,7 +155,7 @@
            <div itemprop="articleBody">
             
   <div class="section" id="create-a-template-from-our-network-diagram">
-<h1>Create a Template from our Network Diagram<a class="headerlink" href="#create-a-template-from-our-network-diagram" title="Permalink to this headline">¶</a></h1>
+<h1>3. Create a Template from our Network Diagram<a class="headerlink" href="#create-a-template-from-our-network-diagram" title="Permalink to this headline">¶</a></h1>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
 <p>Do you find yourself drawing similar diagrams with slight changes?</p>
@@ -179,10 +179,10 @@ We’ll start with a diagram, then show how to make it into a template with cust
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
       
-        <a href="../todo.html" class="btn btn-neutral float-right" title="To Do List" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
+        <a href="../todo.html" class="btn btn-neutral float-right" title="1. To Do List" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
-        <a href="NetworkUsersMachines.html" class="btn btn-neutral float-left" title="Create a Diagram of a Typical Network" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
+        <a href="NetworkUsersMachines.html" class="btn btn-neutral float-left" title="2. Create a Diagram of a Typical Network" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
       
     </div>
   
