--- a/templates/NetworkUsersMachines.html
+++ b/templates/NetworkUsersMachines.html
@@ -86,7 +86,7 @@
 <li class="toctree-l1"><a class="reference internal" href="../principles.html">1. Principles</a></li>
 <li class="toctree-l1 current"><a class="current reference internal" href="#">2. Create a Diagram of a Typical Network</a><ul>
 <li class="toctree-l2"><a class="reference internal" href="#example-network-diagram">2.1. Example Network Diagram</a></li>
-<li class="toctree-l2"><a class="reference internal" href="#select-an-icon-library">2.2. 1. Select an icon library</a></li>
+<li class="toctree-l2"><a class="reference internal" href="#select-an-icon-library">2.2. Select an icon library</a></li>
 <li class="toctree-l2"><a class="reference internal" href="#view-all-the-icons-with-listsprites">2.3. View all the icons with listsprites</a><ul>
 <li class="toctree-l3"><a class="reference internal" href="#source">2.3.1. Source</a></li>
 <li class="toctree-l3"><a class="reference internal" href="#play">2.3.2. Play</a></li>
@@ -305,7 +305,7 @@ firewall --&gt; cloud
 </ol>
 </div>
 <div class="section" id="select-an-icon-library">
-<h2>2.2. 1. Select an icon library<a class="headerlink" href="#select-an-icon-library" title="Permalink to this headline">¶</a></h2>
+<h2>2.2. Select an icon library<a class="headerlink" href="#select-an-icon-library" title="Permalink to this headline">¶</a></h2>
 <p>The OpenSecurityArchitecture library has a nice set of users and network components so we’ll use that.</p>
 <div class="admonition tip">
 <p class="admonition-title">Tip</p>
