content layout, C4, understanding sprites

--- a/templates/NetworkUsersMachines.html
+++ b/templates/NetworkUsersMachines.html
@@ -55,6 +55,9 @@
           
 
           
+            
+            <img src="../_static/plantumllogo.png" class="logo" alt="Logo"/>
+          
           </a>
 
           
@@ -127,10 +130,7 @@
 </ul>
 </li>
 <li class="toctree-l1"><a class="reference internal" href="PassSpriteAsParameter.html">3. Create a Template from our Network Diagram</a></li>
-</ul>
-<p class="caption"><span class="caption-text">OtherFeatures</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../todo.html">1. To Do List</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../todo.html">4. To Do List</a></li>
 </ul>
 
             
