--- a/templates/PassSpriteAsParameter.html
+++ b/templates/PassSpriteAsParameter.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="../_static/theme_overrides.css" type="text/css" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="1. To Do List" href="../todo.html" />
+    <link rel="next" title="4. To Do List" href="../todo.html" />
     <link rel="prev" title="2. Create a Diagram of a Typical Network" href="NetworkUsersMachines.html" /> 
 </head>
 
@@ -54,6 +54,9 @@
             <a href="../index.html" class="icon icon-home"> Playing with PlantUML
           
 
+          
+            
+            <img src="../_static/plantumllogo.png" class="logo" alt="Logo"/>
           
           </a>
 
@@ -86,10 +89,7 @@
 <li class="toctree-l1"><a class="reference internal" href="../principles.html">1. Principles</a></li>
 <li class="toctree-l1"><a class="reference internal" href="NetworkUsersMachines.html">2. Create a Diagram of a Typical Network</a></li>
 <li class="toctree-l1 current"><a class="current reference internal" href="#">3. Create a Template from our Network Diagram</a></li>
-</ul>
-<p class="caption"><span class="caption-text">OtherFeatures</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../todo.html">1. To Do List</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../todo.html">4. To Do List</a></li>
 </ul>
 
             
@@ -179,7 +179,7 @@ We’ll start with a diagram, then show how to make it into a template with cust
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
       
-        <a href="../todo.html" class="btn btn-neutral float-right" title="1. To Do List" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
+        <a href="../todo.html" class="btn btn-neutral float-right" title="4. To Do List" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
         <a href="NetworkUsersMachines.html" class="btn btn-neutral float-left" title="2. Create a Diagram of a Typical Network" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
